# depot-lifecycle-openapi-2.2.0.yaml
@@ -48,7 +48,7 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 2.1.0
+  version: 2.2.0
 externalDocs:
   description: Find out more about this api
   url: https://github.com/TritonInternationalLimited/depot-lifecycle-api
@@ -477,6 +477,47 @@ paths:
           description: this feature is not supported by this server
         503:
           description: API is temporarily paused, and not accepting any activity
+    delete:
+      tags:
+      - estimate
+      summary: cancels an estimate
+      description: Cancels an estimate (deletes it and all revisions from the system)
+      operationId: deleteEstimate
+      parameters:
+      - name: estimateNumber
+        in: path
+        description: the estimate number
+        required: true
+        schema:
+          maxLength: 16
+          type: object
+          example: DEHAMCE1856373
+      - name: depot
+        in: query
+        description: the identifier of the depot
+        required: true
+        schema:
+          maxLength: 9
+          pattern: ^[A-Z0-9]{9}$
+          type: object
+          example: DEHAMCMRA
+      responses:
+        200:
+          description: successfully cancelled the estimate
+        400:
+          description: an error occurred trying to cancel the estimate
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        403:
+          description: cancel estimate is disallowed by security
+        404:
+          description: the estimate or depot was not found
+        501:
+          description: this feature is not supported by this server
+        503:
+          description: API is temporarily paused, and not accepting any activity
     patch:
       tags:
       - estimate
@@ -749,6 +790,64 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         403:
           description: update a gate record is disallowed by security
+        404:
+          description: the shipping container or depot could not be found
+        501:
+          description: this feature is not supported by this server
+        503:
+          description: API is temporarily paused, and not accepting any activity
+    delete:
+      tags:
+      - gate
+      summary: delete a gate record
+      description: Delete a gate record
+      operationId: deleteGate
+      parameters:
+      - name: adviceNumber
+        in: path
+        description: the redelivery or release advice number for the gate record
+        required: true
+        schema:
+          maxLength: 16
+          minLength: 1
+          type: object
+          example: AHAMG000000
+      - name: unitNumber
+        in: path
+        description: the current remark of the shipping container
+        required: true
+        schema:
+          maxLength: 11
+          pattern: ^[A-Z]{4}[X0-9]{6}[A-Z0-9]{0,1}$
+          type: object
+          example: CONU1234561
+      - name: depot
+        in: path
+        description: the identifier of the depot
+        required: true
+        schema:
+          maxLength: 9
+          pattern: ^[A-Z0-9]{9}$
+          type: object
+          example: DEHAMCMRA
+      requestBody:
+        description: gate object to delete an existing record
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GateDeleteRequest'
+        required: true
+      responses:
+        200:
+          description: successfully delete the gate record
+        400:
+          description: an error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        403:
+          description: delete a gate record is disallowed by security
         404:
           description: the shipping container or depot could not be found
         501:
@@ -2232,6 +2331,32 @@ components:
           - OUT
       description: Data required to update a gate in or gate out record. Any data
         not provided will result in no update.
+    GateDeleteRequest:
+      type: object
+      properties:
+        activityTime:
+          required:
+          - "false"
+          type: string
+          description: "the date and time of the gate activity in local time; i.e.\
+            \ `2019-04-10T19:37:04Z` \n\n( notation as defined by [RFC 3339, section\
+            \ 5.6](https://tools.ietf.org/html/rfc3339#section-5.6) )"
+          format: date-time
+        type:
+          maxLength: 3
+          type: string
+          description: |-
+            gate type indicator
+
+            `IN` - Gate In
+
+            `OUT` - Gate Out
+          nullable: true
+          example: IN
+          enum:
+          - IN
+          - OUT
+      description: Data required to delete a gate in or gate out record.
     ReleaseUnit:
       required:
       - status
