# samples/java/src/main/java/depotlifecycle/controllers/GateController.java
@@ -5,12 +5,13 @@ import depotlifecycle.ErrorResponse;
 import depotlifecycle.GateResponse;
 import depotlifecycle.GateStatus;
 import depotlifecycle.PendingResponse;
-import depotlifecycle.domain.EstimateAllocation;
 import depotlifecycle.domain.GateCreateRequest;
 import depotlifecycle.domain.GateUpdateRequest;
+import depotlifecycle.domain.GateDeleteRequest;
 import depotlifecycle.domain.PreliminaryDecision;
 import depotlifecycle.repositories.GateCreateRequestRepository;
 import depotlifecycle.repositories.GateUpdateRequestRepository;
+import depotlifecycle.repositories.GateDeleteRequestRepository;
 import depotlifecycle.repositories.PartyRepository;
 import depotlifecycle.services.AuthenticationProviderUserPassword;
 import io.micronaut.http.HttpRequest;
@@ -20,6 +21,7 @@ import io.micronaut.http.HttpStatus;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.Body;
 import io.micronaut.http.annotation.Controller;
+import io.micronaut.http.annotation.Delete;
 import io.micronaut.http.annotation.Error;
 import io.micronaut.http.annotation.Get;
 import io.micronaut.http.annotation.Post;
@@ -55,6 +57,7 @@ public class GateController {
     private final PartyRepository partyRepository;
     private final GateCreateRequestRepository gateCreateRequestRepository;
     private final GateUpdateRequestRepository gateUpdateRequestRepository;
+    private final GateDeleteRequestRepository gateDeleteRequestRepository;
     private final ObjectToJsonNodeConverter objectToJsonNodeConverter;
     private final SecurityService securityService;
 
@@ -155,6 +158,49 @@ public class GateController {
         objectToJsonNodeConverter.convert(gate, JsonNode.class).ifPresent(jsonNode -> LOG.info(jsonNode.toString()));
 
         return HttpResponse.ok(gate);
+    }
+
+    @Delete(uri = "/{depot}/{adviceNumber}/{unitNumber}", produces = MediaType.APPLICATION_JSON)
+    @Operation(summary = "delete a gate record", description = "Delete a gate record", method = "DELETE", operationId = "deleteGate")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "successfully delete the gate record"),
+        @ApiResponse(responseCode = "400", description = "an error occurred", content = {@Content(schema = @Schema(implementation = ErrorResponse.class))}),
+        @ApiResponse(responseCode = "403", description = "delete a gate record is disallowed by security"),
+        @ApiResponse(responseCode = "404", description = "the shipping container or depot could not be found"),
+        @ApiResponse(responseCode = "501", description = "this feature is not supported by this server"),
+        @ApiResponse(responseCode = "503", description = "API is temporarily paused, and not accepting any activity"),
+    })
+    public HttpResponse<HttpStatus> delete(@Parameter(name = "adviceNumber", description = "the redelivery or release advice number for the gate record", in = ParameterIn.PATH, required = true, schema = @Schema(example = "AHAMG000000", minLength = 1, maxLength = 16)) String adviceNumber,
+                                       @Parameter(name = "unitNumber", description = "the current remark of the shipping container", in = ParameterIn.PATH, required = true, schema = @Schema(example = "CONU1234561", pattern = "^[A-Z]{4}[X0-9]{6}[A-Z0-9]{0,1}$", maxLength = 11)) String unitNumber,
+                                       @Parameter(name = "depot", description = "the identifier of the depot", in = ParameterIn.PATH, required = true, schema = @Schema(pattern = "^[A-Z0-9]{9}$", example = "DEHAMCMRA", maxLength = 9)) String depot,
+                                       @Body @RequestBody(description = "gate object to delete an existing record", required = true, content = {@Content(schema = @Schema(implementation = GateDeleteRequest.class))}) GateDeleteRequest gateDeleteRequest) {
+        LOG.info("Received Gate Delete");
+        objectToJsonNodeConverter.convert(gateDeleteRequest, JsonNode.class).ifPresent(jsonNode -> LOG.info(jsonNode.toString()));
+
+        if(!gateCreateRequestRepository.existsByAdviceNumberAndUnitNumberAndType(adviceNumber, unitNumber, gateDeleteRequest.getType())) {
+            if (securityService.username().equals(AuthenticationProviderUserPassword.VALIDATE_USER_NAME)) {
+                throw new IllegalArgumentException("Gate does not exist.");
+            }
+
+            LOG.info("Gate DNE -> Writing to Gate Delete");
+        }
+
+        if(!gateDeleteRequestRepository.existsByAdviceNumberAndUnitNumberAndType(adviceNumber, unitNumber, gateDeleteRequest.getType(), gateDeleteRequest.getActivityTime())) {
+            if (securityService.username().equals(AuthenticationProviderUserPassword.VALIDATE_USER_NAME)) {
+                throw new IllegalArgumentException("Gate does not exist.");
+            }
+
+            LOG.info("Gate DNE -> Writing to Gate Delete");
+        }
+
+        if (gateDeleteRequest.getDepot() != null) {
+            gateDeleteRequest.setDepot(partyRepository.save(gateDeleteRequest.getDepot()));
+        }
+
+        gateDeleteRequestRepository.save(gateDeleteRequest);
+
+        LOG.info("Gate Deleted, responding with OK");
+        return HttpResponse.ok(HttpStatus.OK);
     }
 
     @Error(status = HttpStatus.NOT_FOUND)
